force-app/main/default/objects/Customer_Verification__c/Customer_Verification__c.object-meta.xml
<CustomObject>
    <label>Customer Verification</label>
    <nameField>
        <label>Nomor Rekening / Nomor Kartu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Verification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>