force-app/main/default/objects/Customer_Verification__c/fields/Alamat_Kantor__c.field-meta.xml
<CustomField>
    <fullName>Alamat_Kantor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alamat Kantor</label>
    <type>Checkbox</type>
</CustomField>