force-app/main/default/objects/Customer_Verification__c/fields/Alamat_Rumah__c.field-meta.xml
<CustomField>
    <fullName>Alamat_Rumah__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alamat Rumah</label>
    <type>Checkbox</type>
</CustomField>