force-app/main/default/objects/Customer_Verification__c/fields/Expired_Date_Kartu__c.field-meta.xml
<CustomField>
    <fullName>Expired_Date_Kartu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired Date Kartu</label>
    <type>Checkbox</type>
</CustomField>