force-app/main/default/objects/Customer_Verification__c/fields/Jabatan_PIC_3__c.field-meta.xml
<CustomField>
    <fullName>Jabatan_PIC_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jabatan PIC 3</label>
    <type>Checkbox</type>
</CustomField>