force-app/main/default/objects/Customer_Verification__c/fields/Jenis_Rekening__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Rekening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jenis Rekening</label>
    <type>Checkbox</type>
</CustomField>