force-app/main/default/objects/Customer_Verification__c/fields/Kontak_Darurat__c.field-meta.xml
<CustomField>
    <fullName>Kontak_Darurat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kontak Darurat</label>
    <type>Checkbox</type>
</CustomField>