force-app/main/default/objects/Customer_Verification__c/fields/Limit_Kartu_Kredit__c.field-meta.xml
<CustomField>
    <fullName>Limit_Kartu_Kredit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limit Kartu Kredit</label>
    <type>Checkbox</type>
</CustomField>