force-app/main/default/objects/Customer_Verification__c/fields/Nama_Nasabah__c.field-meta.xml
<CustomField>
    <fullName>Nama_Nasabah__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nama Nasabah</label>
    <type>Checkbox</type>
</CustomField>