force-app/main/default/objects/Customer_Verification__c/fields/Nama_PIC_3__c.field-meta.xml
<CustomField>
    <fullName>Nama_PIC_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nama PIC 3</label>
    <type>Checkbox</type>
</CustomField>