force-app/main/default/objects/Customer_Verification__c/fields/Nomor_HP_WBS__c.field-meta.xml
<CustomField>
    <fullName>Nomor_HP_WBS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nomor HP (WBS)</label>
    <type>Checkbox</type>
</CustomField>