force-app/main/default/objects/Customer_Verification__c/fields/Nomor_Telepon_Instansi__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Telepon_Instansi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nomor Telepon Instansi</label>
    <type>Checkbox</type>
</CustomField>