force-app/main/default/objects/Customer_Verification__c/fields/Tanggal_Berdiri__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Berdiri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tanggal Berdiri</label>
    <type>Checkbox</type>
</CustomField>