force-app/main/default/objects/Customer_Verification__c/fields/Tanggal_Lahir__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Lahir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tanggal Lahir</label>
    <type>Checkbox</type>
</CustomField>